--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -28,7 +28,7 @@
     position: relative;
     top: 2%;
     justify-content: space-between;
-    margin: 10px;
+    margin:10px;
   }
 
   .logo_img {
@@ -44,7 +44,7 @@
     margin: 0;
     padding: 0;
     padding-bottom: 0.4rem;
-    gap: 30px;
+    gap: 10px;
     overflow-x: auto;
   }
   .navigation_wrap {
@@ -52,8 +52,8 @@
     display: grid;
     grid-template-columns: 1fr 1fr;
     align-items: center;
-    padding: 10px;
-    margin: 10px;
+    padding: 5px;
+    margin: 5px;
   }
 
   header a {
@@ -80,7 +80,7 @@
       /* display: none; */
     }
 
-    .forside {
+    .nyforside {
       display: none;
     }
   }
@@ -98,7 +98,7 @@
       margin: 0px;
     }
     header {
-      gap: 1rem;
+      gap: 2rem;
       align-items: center;
       align-items: right;
       justify-content: space-between;
@@ -124,7 +124,7 @@
       height: auto;
     }
 
-    .forside {
+    .nyforside2 {
       display: block;
     }
 
@@ -223,14 +223,14 @@
       color: pink;
       display: block;
       font-size: 300%;
-      margin-bottom: 30px;
+      margin-bottom: 10px;
       text-decoration: none;
       font-family: "Amatic SC", bold;
       font-size: 1.5rem;
       color: black;
       text-decoration: none;
       text-align: center;
-      padding-top: 2%;
+      padding-top: 1%;
     }
 
     #menu a:hover {
