--- a/src/pages/om_os.astro
+++ b/src/pages/om_os.astro
@@ -289,7 +289,8 @@ import "../style/generelt.css";
   position: relative;
   color: black;
   font-size: 20px;
-  top: 25%;
+  padding: 5%;
+  top: 35%;
   left: 50%;
   bottom: 25%;
   -webkit-transform: translate(-50%, -50%);
