--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -21,30 +21,31 @@ import Image from "astro/components/Image.astro";
     <Header />
 
     <main>
-      <div class="text_container">
-        <div class="image-container">
+      <div class="forside_container">
           <img class="nyforside" src="/img/blomstervin.webp" alt="Hønefuld bliver holdt op mod solen - desktop" />
           <img class="nyforside2" src="/img/blomstervin.webp" alt="Hønefuld bliver holdt op mod solen - mobilversion">
-          <button class="button">
-        <a href="../webshop.astro">Gå til webshop</a>
-      </div>
-      </div>
+          
+
+            <div class="text_container">
+            <h1>Velkommen til Vin Med Dans</h1>
+            <p>Tak fordi du tjekker vores hjemmeside ud! Her kan du købe hjemmeproduceret bær- og frugtvin fra vores 
+              bryggeri i Nordhavn, København. Desuden kan du blive klogere på hvordan vi producerer vores vine og lærer
+              ejerne bag Vin Med Dans at kende. 
+            </p>
+            <br>
     
+            <p>Tjek vores udvalg ud her! Du er velkommen til at kontakte os for spørgsmål. </p>
+          </div>
+
+          <a class="knap" href="/webshop">Tjek vores webshop</a>
+        </div>
      
-      <div class="top-right">
-        <h1>Velkommen til Vin Med Dans</h1>
-        <p>Tak fordi du tjekker vores hjemmeside ud! Her kan du købe hjemmeproduceret bær- og frugtvin fra vores 
-          bryggeri i Nordhavn, København. Desuden kan du blive klogere på hvordan vi producerer vores vine og lærer
-          ejerne bag Vin Med Dans at kende. 
-        </p>
-        <br>
 
-        <p>Tjek vores udvalg ud her! Du er velkommen til at kontakte os for spørgsmål. </p>
-    </div>
+          
 
+       
     <div class="mobil_text">
       <h2>Velkommen til Vin Med Dans</h2>
-      <p>Tjek vores udvalg ud her!</p>
    </div>
 
 
@@ -75,43 +76,36 @@ import Image from "astro/components/Image.astro";
     display: block;
   }
 
-  .text_container .button{
-    display: block;
-  }
-
-  .text_container .button {
+  .forside_container .knap {
   display: block;
   position: absolute;
   background-color: #55a603;
-  bottom: 50%;
-  left: 42%;
+  color: #f0d8e1;
   border-radius: 4px;
   font-family: "Amatic SC";
-  font-size: 0.7rem;
-  color: #f0d8e1;
+  font-size: 0.9rem;
   padding: 7px 25px;
   border: none;
   cursor: pointer;
   text-decoration: none;
+  margin-left: 33%;
+  top: 41%;
 }
 
-.button:hover {
+.knap:hover {
     background-color: #305832;
-  }
-  .top-right{
-  display: none;
   }
 
   .mobil_text {
-  display: block;
   position: absolute;
-  top: 29%;
-  left: 1%;
-  padding-right: 10%;
-  padding-left: 57%;
-  font-size: 0.6 rem;
+  display: block;
+  top: 32%;
+  right: 15%;
   }
 
+  .text_container{
+    display: none;
+  }
   
   /******** Desktop site *******/ 
 
@@ -122,48 +116,41 @@ import Image from "astro/components/Image.astro";
     box-sizing: border-box;
   }
 
-
-  .text_container .button {
-  display: block;
+  .forside_container .knap {
   position: absolute;
+  display: block;
   background-color: #55a603;
-  bottom: 52%;
-  left: 70%;
+  color: #f0d8e1;
+  text-decoration: none;
   border-radius: 4px;
   font-family: "Amatic SC";
   font-size: 1.3rem;
-  color: #f0d8e1;
   padding: 7px 25px;
   border: none;
   cursor: pointer;
-  text-decoration: none;
+  margin-left: 56%;
+  top: 78%;
 }
 
-  .button:hover {
+  .knap:hover {
     background-color: #305832;
+    text-decoration: none;
   }
 
 /* container med knap på billedet */
 .text_container {
   display: block;
-  position: relative;
   text-align: left;
   color: black;
   font-weight: bolder;
-}
-
-/* text i billede*/
-.top-right{
-  display: block;
-  position: absolute;
   top: 25%;
   left: 16px;
   padding-right: 5%;
   padding-left: 57%;
- 
+  position: absolute;
 }
 
-  .nyforside2{
+.nyforside2{
     display: none;
   }
   .nyforside {
@@ -173,8 +160,5 @@ import Image from "astro/components/Image.astro";
     .mobil_text{
     display: none;
   }
-
-  }
-
-  
+}
 </style>
